# cpp-vscode-guide

./: .clang-tidy  .gitignore  .gitmodules  Doxyfile  LICENSE  README.md  coverage.cmake  test_script.sh
.devcontainer/: devcontainer.json
doc/: CMake.md  Coverage.md  Debugging.md  Docker.md  Documentation.md  Extensions.md  FormattingCleanup.md  GitHub.md  Sanitizer.md  StaticAnalysis.md  Testing.md  git.md  plantuml_test.pu
examples/: .clang-format  CMakeLists.txt  Dockerfile  main.cpp
examples/include/: CMakeLists.txt  MyClass1.hxx  MyClass2.cpp  MyClass2.hxx  SomeOtherClass.cpp  SomeOtherClass.hxx
examples/test/: CMakeLists.txt  TestMyClass1.cpp  TestMyClass2.cpp
